--- a/03Develop/JFSADS-E08-TAL062AreaLateralSuperficie/src/main/java/pe/unjfsc/ads/java8/view/JFrame01MostrarRadio.form
+++ b/03Develop/JFSADS-E08-TAL062AreaLateralSuperficie/src/main/java/pe/unjfsc/ads/java8/view/JFrame01MostrarRadio.form
@@ -46,7 +46,7 @@
                           <Component id="jTextFieldTSA" alignment="0" max="32767" attributes="0"/>
                           <Component id="jTextFieldDiametro" alignment="0" max="32767" attributes="0"/>
                           <Component id="jTextFieldATE" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jTextFieldRotarIzquierdaDerecha" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextFieldRotarID" alignment="0" max="32767" attributes="0"/>
                           <Component id="jTextFieldRadio" alignment="0" min="-2" pref="156" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -60,8 +60,8 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                           <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="32" max="32767" attributes="0"/>
-                          <Component id="jTextFieldEnMinusculas" min="-2" pref="106" max="-2" attributes="0"/>
+                          <EmptySpace pref="38" max="32767" attributes="0"/>
+                          <Component id="jTextFieldMinuscula" min="-2" pref="106" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -71,8 +71,8 @@
                           </Group>
                           <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jTextFieldMayusculas" max="32767" attributes="0"/>
-                              <Component id="jTextFieldPrimerUltimoDigito" pref="102" max="32767" attributes="0"/>
+                              <Component id="jTextFieldMayuscula" max="32767" attributes="0"/>
+                              <Component id="jTextField1erUltCaracter" pref="102" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -105,7 +105,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jTextFieldRadio" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextFieldEnMinusculas" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTextFieldMinuscula" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -123,14 +123,14 @@
                   <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jTextFieldATE" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTextFieldMayusculas" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldMayuscula" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTextFieldRotarIzquierdaDerecha" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextFieldRotarID" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTextFieldPrimerUltimoDigito" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextField1erUltCaracter" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -218,7 +218,7 @@
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldRotarIzquierdaDerecha">
+    <Component class="javax.swing.JTextField" name="jTextFieldRotarID">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
@@ -244,7 +244,7 @@
         <Property name="text" type="java.lang.String" value="En minusculas"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldEnMinusculas">
+    <Component class="javax.swing.JTextField" name="jTextFieldMinuscula">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
@@ -254,7 +254,7 @@
         <Property name="text" type="java.lang.String" value="En mayusculas"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldMayusculas">
+    <Component class="javax.swing.JTextField" name="jTextFieldMayuscula">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
@@ -264,7 +264,7 @@
         <Property name="text" type="java.lang.String" value="1er, Ultimo digito"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextFieldPrimerUltimoDigito">
+    <Component class="javax.swing.JTextField" name="jTextField1erUltCaracter">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
       </Properties>
