--- a/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/02Css/Css09v02Errores03.css
+++ b/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/02Css/Css09v02Errores03.css
@@ -1,8 +1,12 @@
 body{
-    font-size: 3em;
+    font-size: 1em;
     font-family: Verdana;
 }
 h1{
     font-family: Garamond;
     color: red;
+}
+
+#idContenido{
+    background-color: #cccccc; 
 }
